--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,11 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
         "symfony/maker-bundle": "^1.34",
+        "symfony/mime": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
+        "symfony/translation": "5.3.*",
         "symfony/yaml": "5.3.*"
     },
     "config": {
