--- a/composer.json
+++ b/composer.json
@@ -65,5 +65,11 @@
             "allow-contrib": false,
             "require": "5.3.*"
         }
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.3",
+        "phpmd/phpmd": "^2.10",
+        "phpstan/phpstan": "^1.2",
+        "squizlabs/php_codesniffer": "^3.6"
     }
 }
