--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,5 +26,9 @@ services:
         arguments:
             $targetDirectory: '%uploads_dir%'
 
+    App\Service\HealthService:
+        arguments:
+            $health: '%env(resolve:APP_ENV)%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
