--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,10 @@
         "friendsofphp/php-cs-fixer": "^3.3",
         "phpmd/phpmd": "^2.10",
         "phpstan/phpstan": "^1.2",
-        "squizlabs/php_codesniffer": "^3.6"
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.6",
+        "symfony/browser-kit": "5.3.*",
+        "symfony/css-selector": "5.3.*",
+        "symfony/phpunit-bridge": "^6.0"
     }
 }
