--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install dependencies
-      - run: composer install
+        run: composer install
 
       - name: Run phpcbf
-      - run: vendor/bin/phpcbf src
+        run: vendor/bin/phpcbf src
 
       - name: Run tests
-      - run: vendor/bin/phpunit
+        run: vendor/bin/phpunit
 
