--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -8,6 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
       - name: Install dependencies
         run: composer install
 
