--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: composer install
+        run: composer install --no-progress
 
       - name: Run phpcbf
         run: vendor/bin/phpcbf src
