--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -10,8 +10,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Create .env file
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          envkey_APP_ENV: "dev"
+          envkey_APP_SECRET: "nonsecretsecret"
+          filename: .env
+
       - name: Install dependencies
-        run: composer install --no-progress
+        run: composer install
 
       - name: Run phpcbf
         run: vendor/bin/phpcbf src
