--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -9,11 +9,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
+      - name: Create .env file
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          envkey_APP_ENV: "dev"
+          envkey_APP_SECRET: "nonsecretsecret"
+          envkey_DATABASE_URL: "mysql://db_user:db_pass@127.0.0.1:3306/db_name?serverVersion=5.7"
+          filename: .env
+
       - name: Install dependencies
         run: composer install
 
-      - name: Run phpcbf
-        run: vendor/bin/phpcbf src
+      - name: Run phpmd
+        run: vendor/bin/phpmd src ansi codesize
 
       - name: Run tests
         run: vendor/bin/phpunit
